# rust-rest-service

./: Cargo.toml  README.md  curl.txt
src/: create_database.sql  main.rs
