[package]
name = "rust_for_life"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.5.6"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = "1.0"
sqlx = { version = "0.5.13", features = ["postgres", "runtime-tokio-native-tls", "chrono"] }
chrono = {version = "0.4", features = ["serde"]}
validator = { version = "0.15", features = ["derive"] }
thiserror = "1.0.29"
http-body = "0.4.3"
async-trait = "0.1"